--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -1,5 +1,5 @@
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {  }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
 
 .green-snackbar {
   color: white;
